--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,6 +12,9 @@
 
     <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
     <%= f.input :password_confirmation, required: false %>
+    <%= f.input :bio, required: false %>
+    <%= f.input :profile_picture, required: false %>
+    <%= f.input :profile_picture_cache, as: :hidden %>
     <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
   </div>
 
