added avatar class to image

--- a/app/views/shared/_logged-in-navbar.html.erb
+++ b/app/views/shared/_logged-in-navbar.html.erb
@@ -8,7 +8,7 @@
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
     <%= link_to "Logout", destroy_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <%= cl_image_tag current_user.profile_picture.url(:avatar) %>
+    <%= cl_image_tag current_user.profile_picture.url(:avatar), class: "avatar" %>
 
   <!-- Dropdown appearing on mobile only -->
   <div class="navbar-wagon-item hidden-md hidden-lg">
