--- a/app/views/shared/_logged-in-navbar.html.erb
+++ b/app/views/shared/_logged-in-navbar.html.erb
@@ -7,7 +7,7 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <%= link_to "Logout", destroy_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= cl_image_tag current_user.profile_picture.url(:avatar), class: "avatar" %>
 
   <!-- Dropdown appearing on mobile only -->
@@ -16,7 +16,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li>
-          <%= link_to "Logout", destroy_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
       </ul>
     </div>
