--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,8 @@
       </div>
       <% end %>
 
-      <%= render "devise/shared/links" %>
+      <p>Already a member? <%= render "devise/shared/links" %></p>
+
     </div>
   </div>
 </div>
