--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,21 @@
 <div class="container">
-  <h1>Hello!</h1>
+  <h1>Projects</h1>
+  <div class="container">
+    <div class="row">
+      <% @projects.each do |project| %>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <%= link_to project_path(project), class: "card-link" do %>
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path project.photo %>);">
+              <div class="card-category"><%= project.category %></div>
+              <div class="card-description">
+                <h2><%= project.title %></h2>
+                <p><%= project.description %></p>
+              </div>
+              <%= cl_image_tag project.user.profile_picture.url(:avatar), class: "card-user" %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
