rearranged profile page

--- a/app/assets/stylesheets/pages/_profile-show.scss
+++ b/app/assets/stylesheets/pages/_profile-show.scss
@@ -1,5 +1,14 @@
+.profile-page {
+  margin-top: 30px;
+}
 .profile-picture {
   height: 250px;
   width: 250px;
 }
-
+.profile-details {
+  margin: 25px 0px;
+  text-align: center;
+}
+.profile-skills {
+  margin: 25px 0px;
+}
