--- a/app/assets/stylesheets/pages/_profile-show.scss
+++ b/app/assets/stylesheets/pages/_profile-show.scss
@@ -5,10 +5,17 @@
   height: 250px;
   width: 250px;
 }
+.profile-edit {
+  margin-top: 15px;
+  text-align: center;
+}
 .profile-details {
-  margin: 25px 0px;
+  margin: 20px 0px 30px 0px;
   text-align: center;
 }
 .profile-skills {
-  margin: 25px 0px;
+  margin: 30px 0px;
+}
+h3 {
+  margin-top: 35px;
 }
