--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -10,7 +10,7 @@
 
       <% if current_user == @user %>
         <div class="profile-edit">
-          <%= link_to "Edit Profile", profile_path(@user) %>
+          <%= link_to "Edit Profile", edit_user_registration_path %>
         </div>
       <% end %>
 
