--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,7 +7,7 @@
   <h3><%= @project.description %></h3>
   <h4><%= @project.location %></h4>
   <p><strong>Number of volunteers needed:</strong> <%= @project.capacity %></p>
-  <p><strong>Project category:</strong> <%= @project.category %></p>
+  <p><strong>Project category:</strong> <%= @project.category.name %></p>
 </div>
 <div class="container">
   <%= simple_form_for [@project, @booking] do |f| %>
