--- a/app/views/shared/_project-card.html.erb
+++ b/app/views/shared/_project-card.html.erb
@@ -1,5 +1,5 @@
-<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path project.photo %>);">
-  <div class="card-category"><%= project.category %></div>
+<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= project.photo %>);">
+  <div class="card-category"><%= project.category.name %></div>
   <div class="card-description">
     <h2><%= project.title %></h2>
     <p><%= project.description %></p>
