edit view and button added

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -7,3 +7,12 @@
     opacity: 0.9;
   }
 }
+
+.btn-edit {
+  background-color: #FC9F5B;
+  border-radius: 5px;
+  color: white !important;
+  &:hover {
+    opacity: 0.9;
+  }
+}
