--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-offset-3 col-md-6">
-      <h2>Create a New Project</h2>
+      <h2>Edit Your Project</h2>
 
       <%= render 'shared/project-form' %>
 
