--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -46,7 +46,9 @@
       <%= cl_image_tag @project.user.profile_picture.url(:avatar), class: "avatar" %>
       <h4><%= @project.user.first_name %> <%= @project.user.last_name %></h4>
       <p><%= @project.user.email %></p>
-      <p><%= @project.user.bio %></p>
+      <% if @project.user == current_user %>
+        <%= link_to "Edit project", edit_project_path(@project), class: "btn btn-edit" %>
+      <% end %>
     <% end %>
   </div>
 </div>
