styled button on form

--- a/app/views/shared/_project-form.html.erb
+++ b/app/views/shared/_project-form.html.erb
@@ -12,6 +12,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Create Project" %>
+    <%= f.button :submit, "Create Project", class: "btn btn-book" %>
   </div>
 <% end %>
