--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,10 @@
 // Specific CSS for your home-page
+.login {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+#banner-typed-text {
+  margin-bottom: 10px;
+}
