--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -51,4 +51,8 @@
       <% end %>
     <% end %>
   </div>
+  <div class="bookings-container text-center">
+    <p>Bookings so far:</p>
+    <h3><%= @project.bookings.length %></h3>
+  </div>
 </div>
