--- a/app/assets/stylesheets/pages/_project-show.scss
+++ b/app/assets/stylesheets/pages/_project-show.scss
@@ -1,25 +1,28 @@
 .show-broken-grid {
-  margin-top: -50px;
+  margin-top: -20px;
   height: 100vh;
   padding: 20px;
   display: grid;
-  grid-template-columns: 3fr 1fr 1fr 3fr 1fr 1fr 1fr 4fr 4fr;
+  grid-template-columns: 3fr 1fr 1fr 3fr 1fr 1fr 1fr 1fr 3fr 4fr;
   grid-template-rows: 2fr 1fr 2fr 1fr 1fr 3fr 1fr;
 }
 
 .description-container {
   grid-row: 1/ span 2;
   grid-column: 3/ span 6;
-  background-color: #7DCFB6;
+  background-color: rgba(125,207,182, 0.7);
   z-index: 2;
   padding: 10px 20px;
   border-radius: 3px;
+  h4 {
+    margin-top: 30px;
+  }
 }
 
 .volunteers-container {
   grid-row: 2/ span 4;
   grid-column: 1/ span 3;
-  background-color: #33CA7F;
+  background-color: rgba(51,202,127, 0.7);
   z-index: 1;
   padding: 10px 20px;
   border-radius: 3px;
@@ -37,8 +40,8 @@
 
 .booking-form-container {
   grid-row: 2/ span 5;
-  grid-column: 8/ span 2;
-  background-color: #FC9F5B;
+  grid-column: 8/ span 3;
+  background-color: rgba(252,159,91,0.7);
   z-index: 3;
   border-radius: 3px;
   display: flex;
@@ -53,12 +56,25 @@
 .host-container {
   grid-row: 5/ span 3;
   grid-column: 3/ span 4;
-  background-color: #87BBA2;
+  background-color: rgba(135,187,162,0.7);
   border-radius: 3px;
   z-index: 0;
   a {
     text-decoration: none;
     color: #333333;
+  }
+}
+
+.bookings-container {
+  grid-row: 4/ span 2;
+  grid-column: 6 / span 3;
+  background-color: rgba(51,202,127, 1);
+  z-index: 6;
+  padding: 10px 20px;
+  border-radius: 3px;
+  h1 {
+    margin: 0;
+    margin-top: 0;
   }
 }
 
