--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -46,3 +46,58 @@
   width: 100%;
   z-index: 2;
 }
+
+/*BOOKING DASHBOARD*/
+
+.card-booking {
+  border: 1px solid rgba(0,0,0,0.1);
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.1);
+  border-radius: 2px;
+  text-align: center;
+  margin-top: 20px;
+}
+.card-margin {
+  margin: 0px;
+  border-radius: 0px;
+  &:hover {
+    opacity: 1.0;
+  }
+}
+.card-project-avatar {
+  border-radius: 50%;
+  border: 1px solid rgba(0,0,0,0.3);
+  box-shadow: 2px 2px 3px rgba(0,0,0,0.4);
+}
+.card-project-owner {
+  width: 80px;
+  position: absolute;
+  bottom: -30px;
+  left: 140px;
+}
+.card-project-details {
+  padding: 0px 30px;
+  p {
+    font-size: 18px;
+    font-weight: lighter;
+    margin-top: 12.5px;
+  }
+}
+.card-project-info {
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+  h2 {
+    font-size: 24px;
+    margin-top: 40px;
+  }
+  a:hover {
+    text-decoration: none;
+  }
+}
+.card-project-dates {
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+.card-project-participants {
+  margin-bottom: 20px;
+}
+.card-project-participant {
+  width: 50px;
+}
