fixed sizing of host image for default photo

--- a/app/assets/stylesheets/pages/_project-show.scss
+++ b/app/assets/stylesheets/pages/_project-show.scss
@@ -63,6 +63,10 @@
     text-decoration: none;
     color: #333333;
   }
+  #host-photo {
+    height: 100px;
+    width: 100px;
+  }
 }
 
 .bookings-container {
