--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -48,6 +48,7 @@
       <p><%= @project.user.email %></p>
       <% if @project.user == current_user %>
         <%= link_to "Edit project", edit_project_path(@project), class: "btn btn-edit" %>
+        <%= link_to "Delete project", project_path(@project), method: :delete, class: "btn btn-delete" %>
       <% end %>
     <% end %>
   </div>
