--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,10 +3,16 @@
   <div class="container">
     <div class="row">
       <% @projects.each do |project| %>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <%= render 'shared/project-card', project: project %>
-        </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <%= render 'shared/project-card', project: project %>
+      </div>
       <% end %>
     </div>
   </div>
+  <div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+  ></div>
 </div>
