styled index page with map

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,5 @@
-<div class="container">
-  <h1>Projects</h1>
-  <div class="container">
+<div class="main-container">
+  <div class="cards-container">
     <div class="row">
       <% @projects.each do |project| %>
       <div class="col-xs-12 col-sm-6 col-md-4">
