--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,7 +5,7 @@
   background-position: center;
   color: white;
   position: relative;
-  margin: 20px;
+  margin-left: 10px;
   border-radius: 2px;
   &:hover {
     opacity: 0.8;
