--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,6 +6,7 @@
   color: white;
   position: relative;
   margin-left: 10px;
+  margin-top: 20px;
   border-radius: 2px;
   &:hover {
     opacity: 0.8;
