--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -57,3 +57,9 @@
     <h3><%= @project.bookings.length %></h3>
   </div>
 </div>
+<div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+  ></div>
