--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -54,7 +54,7 @@
   box-shadow: 1px 1px 3px rgba(0,0,0,0.1);
   border-radius: 2px;
   text-align: center;
-  margin-top: 20px;
+  margin: 20px 0px;
 }
 .card-margin {
   margin: 0px;
@@ -82,8 +82,10 @@
     margin-top: 12.5px;
   }
 }
-.card-project-info {
+.card-bottom-border {
   border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+.card-project-info {
   h2 {
     font-size: 24px;
     margin-top: 40px;
@@ -92,12 +94,10 @@
     text-decoration: none;
   }
 }
-.card-project-dates {
-  border-bottom: 1px solid rgba(0,0,0,0.2);
-}
-.card-project-participants {
-  margin-bottom: 20px;
-}
 .card-project-participant {
   width: 50px;
+  margin-bottom: 20px;
+}
+.card-project-action {
+  margin: 20px 0px ;
 }
