--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,8 +5,7 @@
   background-position: center;
   color: white;
   position: relative;
-  margin-left: 10px;
-  margin-top: 20px;
+  margin: 20px 0px 20px 10px;
   border-radius: 2px;
   &:hover {
     opacity: 0.8;
