--- a/app/assets/stylesheets/pages/_project-show.scss
+++ b/app/assets/stylesheets/pages/_project-show.scss
@@ -1,47 +1,40 @@
 .show-broken-grid {
-  margin-top: -20px;
-  height: 100vh;
+  margin-top: -10px;
+  height: 150vh;
   padding: 20px;
   display: grid;
-  grid-template-columns: 3fr 1fr 1fr 3fr 1fr 1fr 1fr 1fr 3fr 4fr;
-  grid-template-rows: 2fr 1fr 2fr 1fr 1fr 3fr 1fr;
+  grid-template-columns: repeat(30, 1fr);
+  grid-template-rows: repeat(25, 1fr);
 }
 
 .description-container {
-  grid-row: 1/ span 2;
-  grid-column: 3/ span 6;
-  background-color: rgba(125,207,182, 0.7);
+  grid-row: 1/ span 5;
+  grid-column: 1/ span 15;
+  background-color: rgba(125,207,182, 0.4);
   z-index: 2;
   padding: 10px 20px;
   border-radius: 3px;
+  box-shadow: 2px 2px 3px rgba(0,0,0, 0.2);
   h4 {
     margin-top: 30px;
   }
 }
 
 .volunteers-container {
-  grid-row: 2/ span 4;
-  grid-column: 1/ span 3;
-  background-color: rgba(51,202,127, 0.7);
+  grid-row: 7/ span 7;
+  grid-column: 1/ span 7;
+  background-color: rgba(51,202,127, 0.4);
+  box-shadow: 2px 2px 3px rgba(0,0,0, 0.2);
   z-index: 1;
   padding: 10px 20px;
   border-radius: 3px;
-  ul {
-    list-style: none;
-    padding-left: 0;
-  }
-  .volunteers {
-    margin-bottom: 10px;
-  }
-  h1, h3, h4 {
-    margin: 0;
-  }
 }
 
 .booking-form-container {
-  grid-row: 2/ span 5;
-  grid-column: 8/ span 3;
-  background-color: rgba(252,159,91,0.7);
+  grid-row: 1/ span 13;
+  grid-column: 17/ span 13;
+  background-color: rgba(252,159,91,0.6);
+  box-shadow: 2px 2px 3px rgba(0,0,0, 0.2);
   z-index: 3;
   border-radius: 3px;
   display: flex;
@@ -54,9 +47,10 @@
 }
 
 .host-container {
-  grid-row: 5/ span 3;
-  grid-column: 3/ span 4;
-  background-color: rgba(135,187,162,0.7);
+  grid-row: 7/ span 7;
+  grid-column: 9/ span 7;
+  background-color: rgba(135,187,162,0.4);
+  box-shadow: 2px 2px 3px rgba(0,0,0, 0.2);
   border-radius: 3px;
   z-index: 0;
   a {
@@ -69,16 +63,29 @@
   }
 }
 
-.bookings-container {
-  grid-row: 4/ span 2;
-  grid-column: 6 / span 3;
-  background-color: rgba(51,202,127, 1);
-  z-index: 6;
-  padding: 10px 20px;
+.map-container {
+  grid-row: 15 / span 11;
+  grid-column: 1 / span 8;
+  background-color: rgba(51,202,127, 0.4);
+  box-shadow: 2px 2px 3px rgba(0,0,0, 0.2);
   border-radius: 3px;
-  h1 {
-    margin: 0;
-    margin-top: 0;
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  #map {
+    height: 100% !important;
+    width: 100%;
+    flex: 0 0 100%;
+    margin-left: 0;
   }
+}
+
+.long-description {
+  grid-row: 15/ span 11;
+  grid-column: 10/ span 20;
+  background-color: rgba(125,207,182, 0.4);
+  box-shadow: 2px 2px 3px rgba(0,0,0, 0.2);
+  border-radius: 3px;
+  padding: 10px;
 }
 
