--- a/app/assets/stylesheets/pages/_project-show.scss
+++ b/app/assets/stylesheets/pages/_project-show.scss
@@ -86,6 +86,12 @@
   background-color: rgba(125,207,182, 0.4);
   box-shadow: 2px 2px 3px rgba(0,0,0, 0.2);
   border-radius: 3px;
-  padding: 10px;
+  padding: 10px 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  p {
+    font-size: 20px;
+  }
 }
 
