added more styling to index card- looks like polaroid

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,14 @@
+.card-frame {
+  height: 300px;
+  background-color: white;
+  padding: 10px;
+  box-shadow: 2px 2px 3px rgba(0,0,0,0.3);
+  margin: 20px 0px 20px 10px;
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
 .card {
   height: 175px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
@@ -5,11 +16,7 @@
   background-position: center;
   color: white;
   position: relative;
-  margin: 20px 0px 20px 10px;
   border-radius: 2px;
-  &:hover {
-    opacity: 0.8;
-  }
 }
 .card-user {
   position: absolute;
@@ -26,12 +33,12 @@
   text-transform: uppercase;
 }
 .card-description {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
+  // position: absolute;
+  // bottom: 10px;
+  // left: 10px;
 }
 .card-description h2 {
-  font-size: 24px;
+  font-size: 20px;
 }
 .card-description p {
   font-size: 14px;
