--- a/app/assets/stylesheets/pages/_project-index.scss
+++ b/app/assets/stylesheets/pages/_project-index.scss
@@ -1,6 +1,6 @@
 #map {
   flex: 0 0 40%;
-  height: calc(100vh - 70px)!important;
+  height: 100vh !important;
   position: sticky !important;
   top: 0 !important;
   margin-left: 20px;
