--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,6 +2,8 @@
   <div class="row">
     <!-- Left side of profile page -->
 
+    <div class="col-md-1"></div>
+
     <div class="col-xs-12 col-md-3">
 
       <div class="profile-picture">
