--- a/app/views/shared/_logged-in-navbar.html.erb
+++ b/app/views/shared/_logged-in-navbar.html.erb
@@ -7,7 +7,7 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <%= link_to "My Bookings", profiles_bookings_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "My Bookings", bookings_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to profile_path(current_user) do %>
       <%= cl_image_tag current_user.profile_picture.url(:avatar), class: "avatar" %>
@@ -19,7 +19,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li>
-          <%= link_to "My Bookings", profiles_bookings_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          <%= link_to "My Bookings", bookings_path, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
         <li>
           <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %>
