--- a/app/views/shared/_profile-experience.html.erb
+++ b/app/views/shared/_profile-experience.html.erb
@@ -8,7 +8,7 @@
     <% user.bookings.order(:start_date).each do |booking| %>
       <% if booking.start_date <= Date.today && booking.project.category.name == category.name %>
       <li>
-        <%= booking.start_date %> at
+        <%= booking.time_period(booking.start_date, booking.end_date) %> day(s) at
         <%= link_to project_path(booking.project) do  %>
         <%= booking.project.title %>
         <% end %>
