volunteer number added

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,8 +12,9 @@
     <div class="volunteers text-center">
       <h3>Volunteers</h3>
       <h1><i class="fas fa-user-alt"></i></h1>
+      <h4><%= @project.capacity %></h4>
     </div>
-      <h4>Required skills:</h4>
+      <h4>Required experience:</h4>
       <p><%= @project.requirement %></p>
   </div>
   <div class="booking-form-container">
