--- a/app/assets/stylesheets/pages/_project-show.scss
+++ b/app/assets/stylesheets/pages/_project-show.scss
@@ -26,8 +26,11 @@
   background-color: rgba(51,202,127, 0.4);
   box-shadow: 2px 2px 3px rgba(0,0,0, 0.2);
   z-index: 1;
-  padding: 10px 20px;
+  padding: 0 20px 10px 20px;
   border-radius: 3px;
+  h1 {
+    margin: 0;
+  }
 }
 
 .booking-form-container {
