--- a/app/views/shared/_logged-out-navbar.html.erb
+++ b/app/views/shared/_logged-out-navbar.html.erb
@@ -1,8 +1,10 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <a href="/projects" class="navbar-wagon-brand">
-    <%= image_tag "logo.png" %>
-  </a>
+  <div class="logo-div">
+    <a href="/projects" class="navbar-wagon-brand">
+      <%= image_tag "logo.png" %>
+    </a>
+  </div>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
