--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,6 +6,7 @@
   box-shadow: 2px 2px 3px rgba(0,0,0,0.3);
   margin: 20px 0px 20px 10px;
   border-radius: 2px;
+  min-width: 210px;
   &:hover {
     opacity: 0.8;
   }
