--- a/app/views/shared/_logged-in-navbar.html.erb
+++ b/app/views/shared/_logged-in-navbar.html.erb
@@ -8,6 +8,7 @@
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
     <%= link_to "Create new project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "My Projects", my_projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "My Bookings", bookings_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to profile_path(current_user) do %>
@@ -20,6 +21,10 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li>
+          <%= link_to "Create new project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
+        </li><li>
+          <%= link_to "My Project", my_projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
+        </li><li>
           <%= link_to "My Bookings", bookings_path, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
         <li>
