--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -31,6 +31,7 @@
   font-size: 20px;
   border-radius: 5px;
   color: white;
+  padding: 11px 20px;
   &:hover {
     color: rgba(255,255,255,0.7);
   }
