project details page created, styling not good yet

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,5 +1,6 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "profile-show";
+@import "project-details";
 @import "project-show";
 @import "project-index";
