--- a/app/views/profiles/projects.html.erb
+++ b/app/views/profiles/projects.html.erb
@@ -19,7 +19,7 @@
                 <p>Total bookings: <%= project.bookings.count %></p>
               </div>
               <div class="card-bottom-border card-project-det">
-                <%= link_to "See details", project_path(project) %>
+                <%= link_to "See details", my_project_path(project) %>
               </div>
               <div class="card-project-action">
                 <!-- Change "active" boolean to false -->
