--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -62,3 +62,38 @@
     </p>
   </div>
 </div>
+
+<div class="similar-grid">
+  <div class="similar-projects">
+    <h3>Other <%= @project.category.name %> projects:</h3>
+    <div class="container">
+    <div class="row">
+      <% @similar_projects[0..3].each do |project| %>
+        <% if project != @project %>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <%= render 'shared/project-card', project: project %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+    </div>
+  </div>
+</div>
+<% if @similar_locations.length > 1 %>
+  <div class="similar-grid">
+    <div class="similar-locations">
+      <h3>Projects near <%= @project.location %>:</h3>
+      <div class="container">
+        <div class="row">
+          <% @similar_locations[0..3].each do |project| %>
+            <% if project != @project %>
+              <div class="col-xs-12 col-sm-6 col-md-4">
+                <%= render 'shared/project-card', project: project %>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
