--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,4 +1,6 @@
 // Import page-specific CSS files here.
+@import "booking-index";
+@import "booking-show";
 @import "home";
 @import "profile-show";
 @import "project-details";
