--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,4 +1,12 @@
 .avatar {
   border-radius: 50%;
+  // width: 50px;
 }
 
+.avatar-project-owner {
+  position: absolute;
+  left: 140px;
+  bottom: -30px;
+  border: 1px solid rgba(0,0,0,0.3);
+  box-shadow: 2px 2px 3px rgba(0,0,0,0.4);
+}
