--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -5,36 +5,36 @@
       <% @bookings.order(:start_date).each do |booking| %>
       <% if booking.upcoming_booking? %>
       <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-booking">
-          <div class="card card-margin" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= booking.project.photo %>);">
+        <div class="card-dashboard-frame">
+          <div class="card card-dashboard-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= booking.project.photo %>);">
             <%= link_to profile_path(booking.project.user) do %>
-            <%= cl_image_tag booking.project.user.profile_picture.url(:avatar), class: "card-project-avatar card-project-owner" %>
+            <%= cl_image_tag booking.project.user.profile_picture.url(:avatar), class: "avatar avatar-project-owner", width: "80px" %>
             <% end %>
           </div>
-          <div class="card-project-details">
-            <div class="card-bottom-border card-project-info">
+          <div class="card-dashboard-details">
+            <div class="card-bottom-border header-margin">
               <%= link_to project_path(booking.project) do  %>
-              <h2><%= booking.project.title %></h2>
+                <h2><%= booking.project.title %></h2>
               <% end %>
               <p><%= booking.project.location %></p>
             </div>
-            <div class="card-bottom-border card-project-dates">
+            <div class="card-bottom-border">
               <p><%= booking.start_date.strftime("%b %d, %Y") %> - <%= booking.end_date.strftime("%b %d, %Y") %></p>
             </div>
-            <div class="card-bottom-border card-project-participants">
+            <div class="card-bottom-border content-padding-bottom">
               <p>Your fellow volunteers</p>
               <% booking.all_volunteers.each do |volunteer| %>
               <%= link_to profile_path(volunteer) do %>
               <%= cl_image_tag volunteer.profile_picture.url(:avatar),
-              class: "card-project-avatar card-project-participant" %>
+              class: "avatar", width: "50px" %>
               <% end %>
               <% end %>
             </div>
-            <div class="card-bottom-border card-project-det">
+            <div class="card-bottom-border content-padding">
               <%= link_to "See details", booking_path(booking) %>
             </div>
-            <div class="card-project-action">
-              <%= link_to "Cancel booking", booking_path(booking), method: :delete, class: "btn btn-edit" %>
+            <div class="action-margin">
+              <%= link_to "Cancel booking", booking_path(booking), method: :delete, class: "btn btn-delete" %>
             </div>
           </div>
         </div>
@@ -50,36 +50,36 @@
       <% @bookings.order("end_date desc").each do |booking| %>
       <% if booking.past_booking? %>
       <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card-booking">
-          <div class="card card-margin" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= booking.project.photo %>);">
+        <div class="card-dashboard-frame">
+          <div class="card card-dashboard-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= booking.project.photo %>);">
             <%= link_to profile_path(booking.project.user) do %>
-            <%= cl_image_tag booking.project.user.profile_picture.url(:avatar), class: "card-project-avatar card-project-owner" %>
+            <%= cl_image_tag booking.project.user.profile_picture.url(:avatar), class: "avatar avatar-project-owner", width: "80px" %>
             <% end %>
           </div>
-          <div class="card-project-details">
-            <div class="card-bottom-border card-project-info">
+          <div class="card-dashboard-details">
+            <div class="card-bottom-border header-margin">
               <%= link_to project_path(booking.project) do  %>
               <h2><%= booking.project.title %></h2>
               <% end %>
               <p><%= booking.project.location %></p>
             </div>
-            <div class="card-bottom-border card-project-dates">
+            <div class="card-bottom-border">
               <p><%= booking.start_date.strftime("%b %d, %Y") %> - <%= booking.end_date.strftime("%b %d, %Y") %></p>
             </div>
-            <div class="card-bottom-border card-project-participants">
+            <div class="card-bottom-border content-padding-bottom">
               <p>Your fellow volunteers</p>
               <% booking.all_volunteers.each do |volunteer| %>
               <%= link_to profile_path(volunteer) do %>
               <%= cl_image_tag volunteer.profile_picture.url(:avatar),
-              class: "card-project-avatar card-project-participant" %>
+              class: "avatar", width: "50px" %>
               <% end %>
               <% end %>
             </div>
-            <div class="card-bottom-border card-project-det">
+            <div class="card-bottom-border content-padding">
               <%= link_to "See details", booking_path(booking) %>
             </div>
-            <div class="card-project-action">
-              <%= link_to "Add review", booking_path(booking), class: "btn btn-book" %>
+            <div class="action-margin">
+              <%= link_to "Add review", booking_path(booking), class: "btn btn-action" %>
             </div>
           </div>
         </div>
